# pennylane_quantum_circuits

./: 1d_ode.ipynb  README.md  coupled_ode_torch.ipynb  example_new_framework.py  non_trivial_dynamics_torch.ipynb  optax.ipynb  smalles_example.ipynb  test.py  torch.ipynb  torch_simple_example.ipynb  working_fnc_approximatation.ipynb
1-D ODEs/: non_trivial_dynamics_torch.ipynb
1-D ODEs/Parameter_Study_ODE/: embedding_choices.py  non_trivial_dynamics_parameter_study.py  non_trivial_dynamics_wrapper.py  optuna_plots.ipynb  variational_choices.py
Coupled ODEs/: coupled_ode_torch.ipynb  lorenz_torch.ipynb
PDE/Burgers Equation/: burgers_equation.ipynb
PINNs/: non_trivial_dynamics_pinn.ipynb
PINNs/Parameter_Study_ODE/: ntd_hp_pinn_study.py  ntd_hp_pinn_wrapper.py
Performance Tests/: performace_jax_jit.ipynb  performace_jax_lightning.ipynb  performace_torch.ipynb
framework/: __init__.py  plots.py  utils.py
framework/Examples/: burgers_equation_example.py  linear_advection.py  linear_advection_example.py  non_trivial_dynamics._example.py  ode_system_example.py
framework/problem/: problem.py  (+1 more)
framework_module/: pyproject.toml
framework_module/Examples/: burgers_equation_example.py  linear_advection_example.py  non_trivial_dynamics._example.py  ode_system_example.py
framework_module/ParameterStudies/advection/: advection_study.py  advection_wrapper.py
framework_module/framework/: __init__.py  data.py  embedding_choices.py  model.py  solver.py  variational_choices.py
framework_module/tests/: test_ode.py  test_ode_system.py  test_pde.py
(+9 files in other folders)
