
[project]
name = "my-project"
version = "0.1.0"
description = "A minimal Python project"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
max-line-length = 120
good-names = ["i", "j", "k", "ex", "Run"]